# PATTERN_battleship

./: README.md  battleshippart1.cpp
Battleship/: Army_builder.hpp  Building.hpp  CMakeLists.txt  Factory_Of_Man.hpp  Factory_Of_Pirate.hpp  Fleet_builder.hpp  Fleet_tools.hpp  Observe.hpp  Unit_Man.h  Unit_Pirate.h  army_tools.hpp  change_level.hpp  composite_unit.hpp  game_map.hpp  my_hero.hpp  opponent.hpp  play_game.cpp
Battleship/Factories/: Factory_Of_Man.cpp  Factory_Of_Man.h  Factory_Of_Pirate.cpp  Factory_Of_Pirate.h  Man_Boat_factory.cpp  Man_Boat_factory.h  Man_Ship_factory.cpp  Man_Ship_factory.h  Man_Submarine_factory.cpp  Man_Submarine_factory.h  Pirate_Boat_factory.cpp  Pirate_Boat_factory.h  Pirate_Ship_factory.cpp  Pirate_Ship_factory.h  Pirate_Submarine_factory.cpp  Pirate_Submarine_factory.h
Battleship/Fleet_build/: Fleet.cpp  Fleet.h  Fleet_builder.cpp  Fleet_builder.h  Head.cpp  Head.h  Man_Fleet_builder.cpp  Man_Fleet_builder.h  Pirate_Fleet_builder.cpp  Pirate_Fleet_builder.h
Battleship/Linker_and_Fleet_tools/: Composite_Unit_of_Man.cpp  Composite_Unit_of_Man.h  Composite_Unit_of_Pirate.cpp  Composite_Unit_of_Pirate.h  Fleet_tools.hpp
Battleship/Observe_and_building/: Building.hpp  Observe.hpp
Battleship/Units/: Man_Boat.cpp  Man_Boat.h  Man_Ship.cpp  Man_Ship.h  Man_Submarine.cpp  Man_Submarine.h  Pirate_Boat.cpp  Pirate_Boat.h  Pirate_Ship.cpp  Pirate_Ship.h  Pirate_Submarine.cpp  Pirate_Submarine.h  Unit_Man.cpp  Unit_Man.h  Unit_Pirate.cpp  Unit_Pirate.h
Battleship/const_values/: const_value_level_1.h  const_value_level_2.h  first_value_Fleet.h
